<resources>
    <string name="app_name">Health Check</string>
    <string name="input_fields">Введите данные</string>
    <string name="name">Имя</string>
    <string name="age">Возраст</string>
    <string name="gender">Пол</string>
    <string name="height">Рост</string>
    <string name="he">Муж</string>
    <string name="she">Жен</string>
    <string name="slogan">Здоровье - это ваше богатство. Следите за ним вместе с нами.</string>
    <string name="pressure">Давление</string>
    <string name="next">Далее</string>
    <string name="thank">Мы рады, что вы выбрали нас</string>
    <string name="input_quetion">За чем бы вы хотели следить?</string>
    <string name="go">Поехали!</string>
    <string name="nearest_act">Ближайшее действие</string>
    <string name="_day">День</string>
    <string name="_week">Неделя</string>
    <string name="_month">Месяц</string>
    <string name="steps">Шаги</string>
    <string name="sleep">Сон</string>
    <string name="cardio">Кардио</string>
    <string name="weight">Вес</string>
    <string name="preparations">Лекарства</string>
    <string name="healthy_eat">Здоровое питание</string>
    <string name="of_steps">шагов</string>
    <string name="average_steps">шагов среднее</string>
    <string name="kg">кг</string>
    <string name="select_target">Цель на день</string>
    <string name="total_steps">шагов всего</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="select_everyday_target">Введите ежедневную цель</string>
    <string name="input_target">Введите свою цель</string>
    <string name="calories_burned">Сожжено калорий</string>
    <string name="calories">калорий</string>
    <string name="per_day">За день</string>
    <string name="per_week">За неделю</string>
    <string name="per_month">За месяц</string>
    <string name="total_sleeptime">Общее время сна</string>
    <string name="measurements">Измерения</string>
    <string name="input_pressure">Введите ваше давление</string>
    <string name="up_pressure">Верхнее</string>
    <string name="down_pressure">Нижнее</string>
    <string name="input_pulse">Введите ваш пульс</string>
    <string name="beats_per_minute">уд в мин</string>
    <string name="comp_with_norm">Ваши показатели в сравнении нормой</string>
    <string name="yours">ваши</string>
    <string name="norm">норма</string>
    <string name="average">среднее</string>
    <string name="add">Добавить</string>
    <string name="eating">Питание</string>
    <string name="profile">Профиль</string>
    <string name="settings">Настройки</string>
    <string name="taking_pills">Принятие таблеток</string>
    <string name="pills">Таблетки</string>
    <string name="title_of_pills">Введите название таблетки</string>
    <string name="title">Название</string>
    <string name="title_">Название:</string>
    <string name="reminders">Напоминания</string>
    <string name="first_rem">Первый приём</string>
    <string name="second_rem">Второй приём</string>
    <string name="third_rem">Третий приём</string>
    <string name="fourth_rem">Четвёртый приём</string>
    <string name="first_rem_">Первый приём - </string>
    <string name="second_rem_">Второй приём - </string>
    <string name="third_rem_">Третий приём - </string>
    <string name="fourth_rem_">Четвёртый приём - </string>
    <string name="save">Сохранить</string>
    <string name="how_long_sleep">Сколько длился ваш сон</string>
    <string name="start_sleep">Начало сна</string>
    <string name="wakeup">Пробуждение</string>
    <string name="input_steps">Введите количество шагов за сегодня</string>
    <string name="steps5000">5000 шагов</string>
    <string name="steps10000">10000 шагов</string>
    <string name="steps15000">15000 шагов</string>
    <string name="input_weight">Введите ваш вес</string>
    <string name="cm">см</string>
    <string name="neck_girth">Обхват шеи</string>
    <string name="waist_girth">Обхват талии</string>
    <string name="forearm_girth">Обхват предплечья</string>
    <string name="wrist_girth">Обхват запястья</string>
    <string name="hips_girth">Обхват бедер</string>
    <string name="hip_girth">Обхват бедра</string>
    <string name="shin_girth">Обхват голени</string>
    <string name="fat_content">Содержание жира:</string>
    <string name="index_mass_body">Индекс массы тела:</string>
    <string name="addMedicines">Добавьте препарат</string>
    <string name="articles">Статьи о улучшении качества вашего питания</string>
    <string name="duraction_of_course">Длительность курса</string>
    <string name="input_count_of_days">Введите количество дней</string>
    <string name="skip">Пропустить</string>
    <string name="pulse">Пульс</string>
    <string name="xx_per_min">xx ударов в мин</string>
    <string name="tab_60">60</string>
    <string name="tab_80">80</string>
    <string name="tab_120">120</string>
    <string name="finish_course">Закончить курс</string>
    <string name="course">Курс</string>
    <string name="begin">Начало</string>
    <string name="course_progress">Прогресс курса</string>
    <string name="course_miss_total">Пропусков всего</string>
    <string name="save_edit">Сохранить изменения</string>
    <string name="edit">Редактировать</string>
    <string name="theme_choose">Выбор темы</string>
    <string name="no_nearest_act">Пока нет действий</string>
    <string name="input_name">Введите имя</string>
    <string name="input_age">Введите возраст</string>
    <string name="input_height">Введите рост</string>
    <string name="kkal">калорий</string>
    <string name="lastNote">Последние записи</string>
    <string name="notNoteYet">Пока нет записей</string>
    <string name="history">Журнал</string>
    <string name="dateAndTime">Дата и время</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="ChooseTimeAndDate">Введите дату и время</string>
    <string name="emptyString">Пустое поле</string>
    <string name="wrongValue">Неверное значение</string>
    <string name="editHistory">Редактирование записи</string>
    <string name="historyUpdated">Запись обновлена</string>
    <string name="oldValue">Предыдущее значение - </string>
    <string name="inputNewValue">Введите новое значение</string>
    <string name="deliting">Удаление</string>
    <string name="areUSure">Вы действительно хотите удалить курс?</string>
    <string name="yes">Да</string>
    <string name="timeOfNotification">Время уведомления</string>
    <string name="chooseDate">Выберите дату</string>
    <string name="chooseTime">Выберите время</string>
    <string name="mandatoryValue">Обязательное поле</string>
    <string name="or">Или</string>
</resources>