<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPressureUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textInputLayoutPressureDown"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        app:errorEnabled="true"
        >

        <TextView
            android:id="@+id/oldValueText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="120"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPressureUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/up_pressure"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPressureDown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/textInputLayoutPressureUp"
        app:layout_constraintEnd_toStartOf="@id/textInputLayoutPulse"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        app:errorEnabled="true"
        >

        <TextView
            android:id="@+id/oldValueText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="80"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPressureDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/down_pressure"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPulse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/textInputLayoutPressureDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        app:errorEnabled="true"
        >

        <TextView
            android:id="@+id/oldValueText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="67"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPulse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/pulse"
            />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>